# Pekno

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  IRIS_HUB_PLUGIN.md  LICENSE  PEKNO_PLUGIN_GUIDE.md  Pekno_Plugin.md  README.md  docker-compose.accel.cuda.yaml  docker-compose.prod.cuda.yml  docker-compose.prod.yml  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  test_bilibili_hover.py  test_config.py  test_env.py  test_jose.py  test_jose2.py  test_jwt.py  test_ytdlp.py  worker.ml.yml  worker.prod.yml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yaml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-publish.yml
docker/nginx/: default.conf
hub/: __init__.py  main.py
hub/api/: data.py  schemas.py
hub/core/: __init__.py  billing.py  config.py  database.py  database_models.py  init_db.py  logger.py  migrations.py  model_settings.py  models.py  notifications.py  search.py  security.py
migrations/: env.py
migrations/versions/: 5bc497f79b64_rename_github_stars_plugin_id.py  6be3e5703b2d_add_ai_processing_status.py  7a08e96b242d_baseline.py  897b9780e62a_add_long_summary_at_to_items.py  cdb49f938e99_add_preferred_locale_to_users.py  e3eb4bc180ca_add_plugin_id_to_items.py
report/: architecture_analysis_plugin_framework.md  architecture_analysis_plugin_framework.md.resolved
schemas/: item_schema.json
scratch/: test_get_items.py
scripts/: _common.ps1  _common.sh  compose.ps1  compose.sh  dev-expire-bilibili.ps1  dev-expire-bilibili.sh  scheduler_bootstrap.py  smart_migrate.py  start-all.ps1  start-all.sh  start-hub-with-migrate.ps1  start-hub-with-migrate.sh  start-hub.ps1  start-hub.sh  start-scheduler.ps1  start-scheduler.sh  start-web.ps1  start-web.sh  start-worker.ps1  start-worker.sh  test_mcp.py
shared/: api_errors.py  config.py  constants.py  credentials.py  crypto.py  database.py  entities.py  error_codes.py  locale.py  logger.py  models.py  processing.py  schemas.py  secret_store.py  time_utils.py
tests/: debug_bilibili_video_summary.py  run_github_sync.py  run_mcp_admin_update_smoke.py  run_mcp_smoke.py  run_mcp_streamable_smoke.py  send_task.py  test_annotations_api.py  test_github_client.py  test_item_collection_flow.py  test_mcp_admin_tool.py  test_mcp_mount.py  test_mcp_streamable_mount.py  test_plugin_summary_pipeline.py  test_schema.py  test_search.py  test_search_relevance.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
worker/: broker.py  main.py  maintenance.py  runtime.py  tasks.py
(+91 files in other folders)
