[project]
name = "pekno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "mcp[fastapi]>=1.0.0",
    "openai>=2.24.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "taskiq-redis>=1.2.2",
    "tzdata>=2025.3",
    "uvicorn>=0.41.0",
    "dotenv>=0.9.9",
    "yt-dlp[curl-cffi,default]>=2026.3.17",
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
